--- a/style~169.bak.css
+++ b/style~169.bak.css
@@ -3,6 +3,7 @@ body {
 	margin:0;
 	padding: 0;
 	overflow-x:hidden;
+	overflow-y:scroll;
 }
 /* ---Begins CSS for 1920x1080--------------------------------------------------------------------------------*/ 
 @media only screen and (min-width : 1824px) {
@@ -33,18 +34,6 @@ a {
       		-ms-transition: all 2s ease;
           	transition: all 2s ease;
 
-}*/
-.fancybox-custom .fancybox-skin {
-			box-shadow: 0 0 50px #222;
-		}
-.namers {
-	font-size: 1.5em;
-	font-weight: bold;
-	margin-top: 50px;
-		color: black;
-}
-/*.namers:hover{
-	color:#cc3366; 
 }*/
 #topnav {
 	height: 150px;
@@ -78,7 +67,7 @@ a {
 	font-weight: 550;
 	padding: 2%;
 }
-.nav a{
+#nav li a, section a {
 	color:black;
 	font-size:1.2em;
 }
@@ -99,34 +88,6 @@ a {
 	font-size: 1.3em;
 	text-align: center;
 }*/
-#red a{
-	color: #cc3366;
-	font-size: 1.1em;
-}
-#red2 a{
-	color: #cc3366;
-	font-size: 1.2em;
-}
-#mininav {
-	list-style-type: none;
-	font-weight: 900;
-	max-width: 80%;
-	margin-top:-30px;
-	margin-left:750px;
-}
-#mininav li {
-	display: inline-block;
-	font-family: "Codelight";
-	font-weight: 550;
-	padding: 1%;
-}
-.mininav a{
-	color:black;
-	font-size:1.1em;
-}
-#mininav li a:hover {
-	color: #cc3366;
-}
 #ArchDes{
 	margin-top: 120px;
 	font-family: "Codelight";
@@ -158,6 +119,7 @@ margin-bottom: 0px;
 	margin-top: 10%;
 	*/
 section {
+	мар
 	position: relative;
 	margin-top:3%;
 	text-align: center;
@@ -394,7 +356,7 @@ section ul li hr {
  	color: black;
  }
 #wrapper {
-	display: none;
+	display: block;
 }
 #pic {
 	width:40%;
@@ -418,7 +380,7 @@ section ul li hr {
   position:   fixed; 
 }
 #wrapper {
-	display: block; /*change to none*/
+	display: none; /*change to none*/
 }
 #pic {
 	width:40%;
@@ -432,7 +394,7 @@ section ul li hr {
   	opacity:    1;
 }
 #walterwhite {
-  opacity:    0;  /* change to 1*/
+  opacity:    1;  /* change to 1*/
   background: white; 
   width:      100%;
   height:     100%; 
@@ -467,7 +429,6 @@ nav {
     font-family: Codelight;
     src: url(code_light.otf);
 }
-
 #nav {
 	list-style-type: none;
 	font-weight: 900;
@@ -766,10 +727,6 @@ a {
     font-family: Codelight;
     src: url(code_light.otf);
 }
-.nav a{
-	color:black;
-	font-size:1.2em;
-}
 #nav {
 	list-style-type: none;
 	font-weight: 900;
@@ -778,47 +735,17 @@ a {
 	margin-left:auto;
 	margin-right:5%;
 }
-.namers {
-	font-size: 1.5em;
-	font-weight: bold;
-	margin-top: 50px;
-		color: black;
-}
-.namers:hover{
-	color:#cc3366; 
-}
 #nav li {
 	display: inline-block;
 	font-family: "Codelight";
 	font-weight: 550;
 	padding: 2%;
 }
-#red a{
-	color: #cc3366;
-	font-size: 1em;
-}
-#red2 a{
-	color: #cc3366;
-	font-size: 1.1em;
-}
-#mininav {
-	list-style-type: none;
-	font-weight: 900;
-	max-width: 80%;
-	margin-top:-20px;
-	margin-left:300px;
-}
-#mininav li {
-	display: inline-block;
-	font-family: "Codelight";
-	font-weight: 550;
-	padding: 1%;
-}
-.mininav a{
+#nav li a, section a {
 	color:black;
-	font-size:1em;
+	font-size:1.2em;
 }
-#mininav li a:hover {
+#nav li a:hover {
 	color: #cc3366;
 }
 #ArchDes{
@@ -1102,7 +1029,7 @@ section ul li hr {
   	opacity:    1;
 }
 #walterwhite {
-  opacity:    0;  /* change to 1*/
+  opacity:    1;  /* change to 1*/
   background: white; 
   width:      100%;
   height:     100%; 
