--- a/style54bg.css
+++ b/style54bg.css
@@ -11,7 +11,7 @@ body {
 
 a {
 	text-decoration: none;
-	font-family: "Codelight";
+	font-family: "DejaVu";
 }
 #topnav {
 	height: 150px;
@@ -28,8 +28,8 @@ a {
 	z-index: 0;
 }
 @font-face {
-    font-family: Codelight;
-    src: url(code_light.otf);
+    font-family: DejaVu;
+    src: url(DejaVuSans.ttf);
 }
 #nav {
 	list-style-type: none;
@@ -41,7 +41,7 @@ a {
 }
 #nav li {
 	display: inline-block;
-	font-family: "Codelight";
+	font-family: "DejaVu";
 	font-weight: 550;
 	padding: 2%;
 }
@@ -61,14 +61,14 @@ a {
 	z-index: 1000;
 }
 #newest p{
-	font-family: codelight;
+	font-family: DejaVu;
 	font-weight: bold;
 	font-size: 1.3em;
 	text-align: center;
 }*/
 #ArchDes{
 	margin-top: 120px;
-	font-family: "Codelight";
+	font-family: "DejaVu";
 	font-size:1.5em;
 	display:block;
 	font-weight: bold;
@@ -151,7 +151,7 @@ section ul li hr {
 	margin-top: 2%;
 	display: inline-block;
 	list-style-type: none;
-	font-family: "Codelight";
+	font-family: "DejaVu";
 	font-weight:bold;
 	font-size: 1.5em;
 
